# phishing-detector

./: .gitignore  LICENSE  README.md  pyproject.toml
phishdet/: __init__.py  analyzer.py  cli.py
tests/: test_analyzer.py
