[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-detector"
version = "0.1.0"
description = "Detector de phishing por análise heurística de URLs, com pontuação de risco."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Diogo Damasceno", email = "mitszukyo@gmail.com" }]
keywords = ["security", "phishing", "url", "detection", "cybersecurity"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
phishdet = "phishdet.cli:main"

[tool.setuptools.packages.find]
include = ["phishdet*"]
